--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,44 @@ syntax: glob
 .depend
 .vagrant
 Makefile
-build
 docs/_build
 docs/doxygen.log
 images/*.bin
 images/*.dmg
 images/*.img
 tmp/
-xcuserdata
-*.xccheckout
 .deps
 *.cache
 
 images
 hfsinspect
+
+
+# Xcode
+*~
+.DS_Store
+
+*.mode1
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+*.pbxuser
+!default.pbxuser
+*.xcsettings
+*.xcworkspacedata
+*.xcuserstate
+*.xccheckout
+*.xcscmblueprint
+xcuserdata
+build
+DerivedData
+
+## Other
+*.moved-aside
+
+## Obj-C/Swift specific
+*.hmap
+*.ipa
